--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "@tanstack/react-query": "^5.66.5",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
+    "i18next-resources-to-backend": "^1.2.1",
     "lenis": "^1.1.20",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "motion": "^12.4.3",
     "next": "15.1.7",
+    "next-i18next": "^15.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "swiper": "^11.2.4",
     "tailwindcss-aspect-ratio": "^3.0.0",
     "tailwindcss-border-gradients": "^2.0.3",
@@ -30,6 +36,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/i18next": "^13.0.0",
     "@types/lodash": "^4.17.15",
     "@types/node": "^20",
     "@types/react": "^19",
