--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "motion": "^12.4.3",
+    "mysql2": "^3.13.0",
     "next": "15.1.7",
     "next-i18next": "^15.4.2",
     "react": "^19.0.0",
